tests/NormalTests/paczka1/fuzzy1/41607318.err
Error in line 4: 325Ymokx A469 69,2
Error in line 14: Ld0M A774 25,9
Error in line 12: 94Ssp7 A774 94,4
Error in line 18: 325Ymokx S44 44,2
Error in line 21: 94S p7 S716 155,9
Error in line 20: 325Ymokx A469 61,5
Error in line 23: 325Ymokx S716 95,7
Error in line 16: 94Ssp7 S716 42,6
